name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Solomon Bothwell
maintainer:          ssbothwell@gmail.com
copyright:           2018 Solomon Bothwell
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  ghc-options:         -Wall
  exposed-modules:     SqliteLib
                     , TelnetLib
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , bytestring
                     , raw-strings-qq
                     , sqlite-simple
                     , text
                     , network
                     , mtl
  default-language: Haskell2010

executable fingerd
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       SqliteLib
                     , TelnetLib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , mtl
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , stm
                     , text
                     , transformers
                     , trifecta

executable addUser
  ghc-options:        -Wall
  hs-source-dirs:      src
  main-is:             AddUser.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , raw-strings-qq
                     , sqlite-simple
                     , text
